# tree-sitter-plymouth-script

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
bindings/c/: tree-sitter-plymouth_script.h  tree-sitter-plymouth_script.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_plymouth_script/: __init__.py  binding.c
bindings/rust/: lib.rs
queries/: highlights-params.scm  highlights.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: PlymouthTheme-Cat.txt  basic.script  basic.txt  semaphore.script  semaphore.txt
