[package]
name = "tree-sitter-plymouth-script"
description = "plymouth-script grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "plymouth-script"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-plymouth-script"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
